Reorganize report API, new DB method for account groups, partial update to unit test, start to reorganize DB notebooks

--- a/sandbox/DB.ipynb
+++ b/sandbox/DB.ipynb
@@ -125,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Account: <Acct equity equity>>, <Account: <Acct yoyodyne income>>, <Account: <Acct bank:checking asset>>, <Account: <Acct amex:blue liability>>, <Account: <Acct chase:visa liability>>, <Account: <Acct groceries expense>>, <Account: <Acct household expense>>, <Account: <Acct mortgage expense>>, <Account: <Acct car expense>>, <Account: <Acct travel expense>>, <Account: <Acct equity equity>>, <Account: <Acct equity equity>>]"
+       "[<Account: <Acct equity equity>>, <Account: <Acct yoyodyne income>>, <Account: <Acct bank:checking assets>>, <Account: <Acct amex:blue liabilities>>, <Account: <Acct chase:visa liabilities>>, <Account: <Acct groceries expenses>>, <Account: <Acct household expenses>>, <Account: <Acct mortgage expenses>>, <Account: <Acct car expenses>>, <Account: <Acct travel expenses>>, <Account: <Acct equity equity>>]"
       ]
      },
      "execution_count": 5,
@@ -250,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "['admin', 'config', 'dev', 'dexter', 'local', 'pytest']"
+       "['admin', 'config', 'demo', 'dev', 'dexter', 'local', 'pytest']"
       ]
      },
      "execution_count": 11,
@@ -319,7 +319,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('67f16179bcd0bf7da28fa44f'),\n",
+       "{'_id': ObjectId('68007573f56e559899ff7474'),\n",
        " 'name': 'equity',\n",
        " 'category': 'equity',\n",
        " 'comment': 'type: equity'}"
@@ -343,10 +343,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'entry', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'<j\\xa3Z\\x13\\xf3F\\x8d\\xb7\\x9fJ\\xb7\\xde\\x8a\\x07\\xe3', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
-      "{'name': 'transaction', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b\"_\\x1e\\xb9c0\\xa9A2\\xa2'\\xb9\\xd5\\x85D \\x14\", 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
-      "{'name': 'reg_exp', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xa2\\xf9\\xee\\xa4\\xed*Ja\\x97\\rl\\xceDA\\xb7\\xaf', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
-      "{'name': 'account', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xaa\\xfe\\xa4l\\x96XAo\\x93\\xd0\\x82\\x00{\\xba\\x7fe', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n"
+      "{'name': 'account', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b' \\x83K\\xf6\\x06*Av\\x8d\\xf0e\\x10)\\xe5t\\xdd', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
+      "{'name': 'reg_exp', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xdcv\\x99\\xc3\\xee\\xc4J\\x0f\\x9b!e\\x1e\\xd2\\xb6@\\xf3', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
+      "{'name': 'entry', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xdd\\x0e|\\xbb\"]G\\x94\\x9e\\xb5\\xc1\\xcb\\xe2\\xdb\\x19=', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
+      "{'name': 'transaction', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xf5\\x12\\xbc\\xdbm3N\\xe0\\xbfe\\x9c/\\xd6\\x82\\xd8\\xb4', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n"
      ]
     }
    ],
@@ -364,10 +364,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entry\n",
-      "transaction\n",
+      "account\n",
       "reg_exp\n",
-      "account\n"
+      "entry\n",
+      "transaction\n"
      ]
     }
    ],
@@ -409,7 +409,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('67f16179bcd0bf7da28fa44f'),\n",
+       "{'_id': ObjectId('68007573f56e559899ff7474'),\n",
        " 'name': 'equity',\n",
        " 'category': 'equity',\n",
        " 'comment': 'type: equity'}"
@@ -433,18 +433,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('67f16179bcd0bf7da28fa44f'), 'name': 'equity', 'category': 'equity', 'comment': 'type: equity'}\n",
-      "{'_id': ObjectId('67f16179bcd0bf7da28fa450'), 'name': 'yoyodyne', 'category': 'income', 'comment': 'type: income'}\n",
-      "{'_id': ObjectId('67f16179bcd0bf7da28fa451'), 'name': 'bank:checking', 'category': 'asset', 'comment': 'type: asset'}\n",
-      "{'_id': ObjectId('67f16179bcd0bf7da28fa452'), 'name': 'amex:blue', 'category': 'liability', 'comment': 'type: liability'}\n",
-      "{'_id': ObjectId('67f16179bcd0bf7da28fa453'), 'name': 'chase:visa', 'category': 'liability', 'comment': 'type: liability'}\n",
-      "{'_id': ObjectId('67f16179bcd0bf7da28fa454'), 'name': 'groceries', 'category': 'expense', 'comment': 'type: expense'}\n",
-      "{'_id': ObjectId('67f16179bcd0bf7da28fa455'), 'name': 'household', 'category': 'expense', 'comment': 'type: expense'}\n",
-      "{'_id': ObjectId('67f16179bcd0bf7da28fa456'), 'name': 'mortgage', 'category': 'expense', 'comment': 'type: expense'}\n",
-      "{'_id': ObjectId('67f16179bcd0bf7da28fa457'), 'name': 'car', 'category': 'expense', 'comment': 'type: expense'}\n",
-      "{'_id': ObjectId('67f16179bcd0bf7da28fa458'), 'name': 'travel', 'category': 'expense', 'comment': 'type: expense'}\n",
-      "{'_id': ObjectId('67f179c99aecc179a6b38acf'), 'name': 'equity', 'category': 'equity'}\n",
-      "{'_id': ObjectId('67f2b70295477cfde0e2bb64'), 'name': 'equity', 'category': 'equity'}\n"
+      "{'_id': ObjectId('68007573f56e559899ff7474'), 'name': 'equity', 'category': 'equity', 'comment': 'type: equity'}\n",
+      "{'_id': ObjectId('68007573f56e559899ff7475'), 'name': 'yoyodyne', 'category': 'income', 'comment': 'type: income'}\n",
+      "{'_id': ObjectId('68007573f56e559899ff7476'), 'name': 'bank:checking', 'category': 'assets', 'comment': 'type: assets'}\n",
+      "{'_id': ObjectId('68007573f56e559899ff7477'), 'name': 'amex:blue', 'category': 'liabilities', 'comment': 'type: liabilities'}\n",
+      "{'_id': ObjectId('68007573f56e559899ff7478'), 'name': 'chase:visa', 'category': 'liabilities', 'comment': 'type: liabilities'}\n",
+      "{'_id': ObjectId('68007573f56e559899ff7479'), 'name': 'groceries', 'category': 'expenses', 'comment': 'type: expenses'}\n",
+      "{'_id': ObjectId('68007573f56e559899ff747a'), 'name': 'household', 'category': 'expenses', 'comment': 'type: expenses'}\n",
+      "{'_id': ObjectId('68007573f56e559899ff747b'), 'name': 'mortgage', 'category': 'expenses', 'comment': 'type: expenses'}\n",
+      "{'_id': ObjectId('68007573f56e559899ff747c'), 'name': 'car', 'category': 'expenses', 'comment': 'type: expenses'}\n",
+      "{'_id': ObjectId('68007573f56e559899ff747d'), 'name': 'travel', 'category': 'expenses', 'comment': 'type: expenses'}\n",
+      "{'_id': ObjectId('68007807b9f3bcfa66710ce8'), 'name': 'equity', 'category': 'equity'}\n"
      ]
     }
    ],
@@ -1088,7 +1087,7 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[<Tag.U: 'unpaired'>]"
       ]
      },
      "execution_count": 50,
@@ -1137,7 +1136,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Tag.U: 'unpaired'>]"
+       "[<Tag.U: 'unpaired'>, <Tag.U: 'unpaired'>]"
       ]
      },
      "execution_count": 53,
@@ -1283,7 +1282,7 @@
     {
      "data": {
       "text/plain": [
-       "['entry', 'transaction', 'reg_exp', 'account']"
+       "['account', 'reg_exp', 'entry', 'transaction']"
       ]
      },
      "execution_count": 60,
@@ -1303,7 +1302,7 @@
     {
      "data": {
       "text/plain": [
-       "{'n': 12, 'ok': 1.0}"
+       "{'n': 11, 'ok': 1.0}"
       ]
      },
      "execution_count": 61,
@@ -1329,9 +1328,9 @@
        " 'maxBsonObjectSize': 16777216,\n",
        " 'maxMessageSizeBytes': 48000000,\n",
        " 'maxWriteBatchSize': 100000,\n",
-       " 'localTime': datetime.datetime(2025, 4, 6, 17, 16, 51, 168000),\n",
+       " 'localTime': datetime.datetime(2025, 4, 17, 3, 39, 52, 112000),\n",
        " 'logicalSessionTimeoutMinutes': 30,\n",
-       " 'connectionId': 292,\n",
+       " 'connectionId': 544,\n",
        " 'minWireVersion': 0,\n",
        " 'maxWireVersion': 25,\n",
        " 'readOnly': False,\n",
@@ -1355,7 +1354,7 @@
     {
      "data": {
       "text/plain": [
-       "{'system': {'currentTime': datetime.datetime(2025, 4, 6, 17, 16, 51, 172000),\n",
+       "{'system': {'currentTime': datetime.datetime(2025, 4, 17, 3, 39, 52, 117000),\n",
        "  'hostname': 'cthulhu.local',\n",
        "  'cpuAddrSize': 64,\n",
        "  'memSizeMB': 65536,\n",
@@ -1496,10 +1495,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'groceries', 'bank:checking'}\n",
-      "{'groceries', 'chase:visa'}\n",
-      "{'groceries', 'bank:checking'}\n",
-      "{'groceries', 'chase:visa'}\n"
+      "{'bank:checking', 'groceries'}\n",
+      "{'chase:visa', 'groceries'}\n",
+      "{'bank:checking', 'groceries'}\n",
+      "{'chase:visa', 'groceries'}\n"
      ]
     }
    ],
@@ -2851,7 +2850,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-01-02 bank:checking 5000.0 debit\n"
+      "2024-01-02 bank:checking 5000.0 debit\n",
+      "2024-01-02 yoyodyne 5000.0 credit\n",
+      "2024-01-02 yoyodyne 5000.0 debit\n",
+      "2024-01-02 groceries 300.0 credit\n",
+      "2024-01-02 mortgage 1800.0 credit\n",
+      "2024-01-02 car 900.0 credit\n",
+      "2024-01-02 travel 2000.0 credit\n",
+      "2024-02-02 bank:checking 5000.0 debit\n",
+      "2024-02-02 yoyodyne 5000.0 credit\n",
+      "2024-02-02 yoyodyne 5000.0 debit\n",
+      "2024-02-02 groceries 300.0 credit\n",
+      "2024-02-02 mortgage 1800.0 credit\n",
+      "2024-02-02 car 900.0 credit\n",
+      "2024-02-02 travel 2000.0 credit\n",
+      "2024-01-05 car 500.0 debit\n",
+      "2024-01-05 bank:checking 500.0 credit\n",
+      "2024-02-05 car 500.0 debit\n",
+      "2024-02-05 bank:checking 500.0 credit\n",
+      "2024-01-10 car 50.0 debit\n",
+      "2024-01-10 chase:visa 50.0 credit\n",
+      "2024-02-26 car 60.0 debit\n",
+      "2024-02-26 chase:visa 60.0 credit\n",
+      "2024-01-04 mortgage 1800.0 debit\n",
+      "2024-01-04 bank:checking 1800.0 credit\n",
+      "2024-02-04 mortgage 1800.0 debit\n",
+      "2024-02-04 bank:checking 1800.0 credit\n",
+      "2024-01-07 groceries 75.0 debit\n",
+      "2024-01-07 bank:checking 75.0 credit\n",
+      "2024-01-21 groceries 175.0 debit\n",
+      "2024-01-21 chase:visa 175.0 credit\n",
+      "2024-02-07 groceries 75.0 debit\n",
+      "2024-02-07 bank:checking 75.0 credit\n",
+      "2024-02-21 groceries 75.0 debit\n",
+      "2024-02-21 chase:visa 75.0 credit\n",
+      "2024-03-10 household 50.0 debit\n",
+      "2024-03-10 amex:blue 50.0 credit\n",
+      "2024-03-12 household 25.0 credit\n",
+      "2024-03-12 amex:blue 25.0 debit\n"
      ]
     }
    ],
@@ -2902,7 +2938,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"_id\": {\"$oid\": \"67f1617abcd0bf7da28fa486\"}, \"description\": \"Shell Oil\", \"comment\": \"\", \"tags\": [], \"entries\": [{\"$oid\": \"67f1617abcd0bf7da28fa46d\"}, {\"$oid\": \"67f1617abcd0bf7da28fa46e\"}], \"pdate\": {\"$date\": 1708905600000}, \"pdebit\": \"car\", \"pcredit\": \"chase:visa\", \"pamount\": 60.0}'"
+       "'{\"_id\": {\"$oid\": \"68007573f56e559899ff7485\"}, \"description\": \"Shell Oil\", \"comment\": \"\", \"tags\": [], \"entries\": [{\"$oid\": \"68007573f56e559899ff7462\"}, {\"$oid\": \"68007573f56e559899ff7463\"}], \"pdate\": {\"$date\": 1708905600000}, \"pdebit\": \"car\", \"pcredit\": \"chase:visa\", \"pamount\": 60.0}'"
       ]
      },
      "execution_count": 126,
@@ -2971,12 +3007,12 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('67f1617abcd0bf7da28fa47f'),\n",
+       "{'_id': ObjectId('68007573f56e559899ff747e'),\n",
        " 'description': 'paycheck',\n",
        " 'comment': '',\n",
        " 'tags': [],\n",
-       " 'entries': [ObjectId('67f16179bcd0bf7da28fa459'),\n",
-       "  ObjectId('67f1617abcd0bf7da28fa45a')],\n",
+       " 'entries': [ObjectId('68007573f56e559899ff744e'),\n",
+       "  ObjectId('68007573f56e559899ff744f')],\n",
        " 'pdate': datetime.datetime(2024, 1, 2, 0, 0),\n",
        " 'pdebit': 'bank:checking',\n",
        " 'pcredit': 'yoyodyne',\n",
@@ -3009,12 +3045,12 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': {'$oid': '67f1617abcd0bf7da28fa486'},\n",
+       "{'_id': {'$oid': '68007573f56e559899ff7485'},\n",
        " 'description': 'Shell Oil',\n",
        " 'comment': '',\n",
        " 'tags': [],\n",
-       " 'entries': [{'$oid': '67f1617abcd0bf7da28fa46d'},\n",
-       "  {'$oid': '67f1617abcd0bf7da28fa46e'}],\n",
+       " 'entries': [{'$oid': '68007573f56e559899ff7462'},\n",
+       "  {'$oid': '68007573f56e559899ff7463'}],\n",
        " 'pdate': {'$date': 1708905600000},\n",
        " 'pdebit': 'car',\n",
        " 'pcredit': 'chase:visa',\n",
@@ -3342,7 +3378,7 @@
     {
      "data": {
       "text/plain": [
-       "UUID('3f7011dc-4ca5-4444-ab31-4eda72db1667')"
+       "UUID('ada0fd21-bca0-4fe7-8885-e6a8cf6be946')"
       ]
      },
      "execution_count": 148,
@@ -3440,7 +3476,7 @@
     {
      "data": {
       "text/plain": [
-       "UUID('93b6c212-6d0f-4d5d-a8b2-81f04a613b2f')"
+       "UUID('efdfeb40-3be0-4955-9c0e-cd2032a75ed6')"
       ]
      },
      "execution_count": 154,
@@ -3568,187 +3604,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Match Account Names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Account: <Acct bank:checking asset>>]"
-      ]
-     },
-     "execution_count": 161,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Account.objects(name__contains='checking')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Account: <Acct bank:checking asset>>, <Account: <Acct groceries expense>>, <Account: <Acct mortgage expense>>]"
-      ]
-     },
-     "execution_count": 162,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Account.objects(name__contains='g')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Account: <Acct bank:checking asset>>, <Account: <Acct groceries expense>>, <Account: <Acct mortgage expense>>]"
-      ]
-     },
-     "execution_count": 163,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DB.find_account('g')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'amex',\n",
-       " 'bank',\n",
-       " 'blue',\n",
-       " 'car',\n",
-       " 'chase',\n",
-       " 'checking',\n",
-       " 'equity',\n",
-       " 'groceries',\n",
-       " 'household',\n",
-       " 'mortgage',\n",
-       " 'travel',\n",
-       " 'visa',\n",
-       " 'yoyodyne'}"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DB.account_name_parts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'car', 'groceries', 'household', 'mortgage', 'travel'}"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DB.account_name_parts('expense')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'equity': ['equity', 'equity', 'equity'],\n",
-       " 'yoyodyne': ['yoyodyne'],\n",
-       " 'bank': ['bank:checking'],\n",
-       " 'checking': ['bank:checking'],\n",
-       " 'amex': ['amex:blue'],\n",
-       " 'blue': ['amex:blue'],\n",
-       " 'chase': ['chase:visa'],\n",
-       " 'visa': ['chase:visa'],\n",
-       " 'groceries': ['groceries'],\n",
-       " 'household': ['household'],\n",
-       " 'mortgage': ['mortgage'],\n",
-       " 'car': ['car'],\n",
-       " 'travel': ['travel']}"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DB.full_names()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'groceries': ['groceries'],\n",
-       " 'household': ['household'],\n",
-       " 'mortgage': ['mortgage'],\n",
-       " 'car': ['car'],\n",
-       " 'travel': ['travel']}"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DB.full_names('expense')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Aggregation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -3757,7 +3618,7 @@
        "50370.0"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3768,7 +3629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -3777,7 +3638,7 @@
        "[<Entry: <En 2024-01-02 yoyodyne -$5000.0>>, <Entry: <En 2024-01-02 groceries -$300.0>>, <Entry: <En 2024-01-02 mortgage -$1800.0>>, <Entry: <En 2024-01-02 car -$900.0>>, <Entry: <En 2024-01-02 travel -$2000.0>>, <Entry: <En 2024-02-02 yoyodyne -$5000.0>>, <Entry: <En 2024-02-02 groceries -$300.0>>, <Entry: <En 2024-02-02 mortgage -$1800.0>>, <Entry: <En 2024-02-02 car -$900.0>>, <Entry: <En 2024-02-02 travel -$2000.0>>, <Entry: <En 2024-01-05 bank:checking -$500.0>>, <Entry: <En 2024-02-05 bank:checking -$500.0>>, <Entry: <En 2024-01-10 chase:visa -$50.0>>, <Entry: <En 2024-02-26 chase:visa -$60.0>>, <Entry: <En 2024-01-04 bank:checking -$1800.0>>, <Entry: <En 2024-02-04 bank:checking -$1800.0>>, <Entry: <En 2024-01-07 bank:checking -$75.0>>, <Entry: <En 2024-01-21 chase:visa -$175.0>>, <Entry: <En 2024-02-07 bank:checking -$75.0>>, <Entry: <En 2024-02-21 chase:visa -$75.0>>, '...(remaining elements truncated)...']"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3788,7 +3649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -3797,7 +3658,7 @@
        "25185.0"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3808,7 +3669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -3817,7 +3678,7 @@
        "600.0"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3828,7 +3689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
