--- a/sandbox/DB_accounts.ipynb
+++ b/sandbox/DB_accounts.ipynb
@@ -168,8 +168,7 @@
        " 'assets': ['assets:checking', 'assets:savings'],\n",
        " 'checking': ['assets:checking'],\n",
        " 'savings': ['assets:savings'],\n",
-       " 'expenses': ['expenses',\n",
-       "  'expenses:car',\n",
+       " 'expenses': ['expenses:car',\n",
        "  'expenses:food',\n",
        "  'expenses:food:groceries',\n",
        "  'expenses:food:restaurant',\n",
@@ -206,8 +205,7 @@
     {
      "data": {
       "text/plain": [
-       "{'expenses': ['expenses',\n",
-       "  'expenses:car',\n",
+       "{'expenses': ['expenses:car',\n",
        "  'expenses:food',\n",
        "  'expenses:food:groceries',\n",
        "  'expenses:food:restaurant',\n",
@@ -242,7 +240,6 @@
        "['equity',\n",
        " 'assets:checking',\n",
        " 'assets:savings',\n",
-       " 'expenses',\n",
        " 'expenses:car',\n",
        " 'expenses:food',\n",
        " 'expenses:food:groceries',\n",
@@ -270,8 +267,7 @@
     {
      "data": {
       "text/plain": [
-       "['expenses',\n",
-       " 'expenses:car',\n",
+       "['expenses:car',\n",
        " 'expenses:food',\n",
        " 'expenses:food:groceries',\n",
        " 'expenses:food:restaurant',\n",
@@ -296,7 +292,7 @@
     {
      "data": {
       "text/plain": [
-       "['expenses']"
+       "['expenses.*']"
       ]
      },
      "execution_count": 12,
@@ -317,7 +313,7 @@
     {
      "data": {
       "text/plain": [
-       "['expenses', 'expenses:car', 'expenses:food', 'expenses:home']"
+       "['expenses:car.*', 'expenses:food.*', 'expenses:home.*']"
       ]
      },
      "execution_count": 13,
@@ -338,12 +334,11 @@
     {
      "data": {
       "text/plain": [
-       "['expenses',\n",
-       " 'expenses:car',\n",
-       " 'expenses:food',\n",
-       " 'expenses:food:groceries',\n",
-       " 'expenses:food:restaurant',\n",
-       " 'expenses:home']"
+       "['expenses:car.*',\n",
+       " 'expenses:food.*',\n",
+       " 'expenses:food:groceries.*',\n",
+       " 'expenses:food:restaurant.*',\n",
+       " 'expenses:home.*']"
       ]
      },
      "execution_count": 14,
@@ -385,7 +380,7 @@
     {
      "data": {
       "text/plain": [
-       "['expenses:food']"
+       "['expenses:food.*']"
       ]
      },
      "execution_count": 16,
@@ -406,7 +401,7 @@
     {
      "data": {
       "text/plain": [
-       "['expenses:food', 'expenses:food:groceries', 'expenses:food:restaurant']"
+       "['expenses:food.*', 'expenses:food:groceries.*', 'expenses:food:restaurant.*']"
       ]
      },
      "execution_count": 17,
@@ -420,8 +415,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e489a913",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['expenses:car',\n",
+       " 'expenses:food',\n",
+       " 'expenses:food:groceries',\n",
+       " 'expenses:food:restaurant',\n",
+       " 'expenses:home',\n",
+       " 'income:yoyodyne']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.account_groups(['expenses','income'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e6fd9f32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['expenses.*', 'income.*']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.account_groups(['expenses:1','income:1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7770e67f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['expenses:car.*', 'expenses:food.*', 'expenses:home.*', 'income:yoyodyne.*']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.account_groups(['expenses:2','income:2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a5257e7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 0, 'b': 2, 'c': 3}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{'a': 0, 'b': 1} | {'b': 2, 'c': 3}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd33fd91",
    "metadata": {},
    "outputs": [],
    "source": []
