--- a/sandbox/DB_accounts.ipynb
+++ b/sandbox/DB_accounts.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dexter.DB import DB, Account, Entry, Transaction, Document"
+    "from dexter.DB import DB, Account, Entry, Transaction, Document, Tag\n",
+    "\n",
+    "import re"
    ]
   },
   {
@@ -334,11 +336,11 @@
     {
      "data": {
       "text/plain": [
-       "['expenses:car.*',\n",
-       " 'expenses:food.*',\n",
+       "['expenses:car',\n",
+       " 'expenses:food',\n",
        " 'expenses:food:groceries.*',\n",
        " 'expenses:food:restaurant.*',\n",
-       " 'expenses:home.*']"
+       " 'expenses:home']"
       ]
      },
      "execution_count": 14,
@@ -401,7 +403,7 @@
     {
      "data": {
       "text/plain": [
-       "['expenses:food.*', 'expenses:food:groceries.*', 'expenses:food:restaurant.*']"
+       "['expenses:food', 'expenses:food:groceries.*', 'expenses:food:restaurant.*']"
       ]
      },
      "execution_count": 17,
@@ -482,15 +484,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31f85f2b",
+   "metadata": {},
+   "source": [
+    "### Balances"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a5257e7a",
+   "id": "bd33fd91",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a': 0, 'b': 2, 'c': 3}"
+       "[<Entry: <En 2024-01-02 expenses:food -$1000.0 [<Tag.B: '#budget'>]>>, <Entry: <En 2024-01-07 expenses:food:restaurant +$75.0 []>>, <Entry: <En 2024-01-08 expenses:food:restaurant -$35.0 []>>]"
       ]
      },
      "execution_count": 21,
@@ -499,13 +509,237 @@
     }
    ],
    "source": [
-    "{'a': 0, 'b': 1} | {'b': 2, 'c': 3}"
+    "DB.select(Entry, account='expenses:food*')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f0e2ce84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<En 2024-01-02 expenses:food -$1000.0 [<Tag.B: '#budget'>]>\n",
+      "<En 2024-01-07 expenses:food:restaurant +$75.0 []>\n",
+      "<En 2024-01-08 expenses:food:restaurant -$35.0 []>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in DB.select(Entry, account='expenses:food*'):\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9ac369d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Tr 2024-01-02 expenses:home/expenses:car/expenses:food -> income:yoyodyne $5000.0 fill envelopes ['#budget']>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in DB.select(Transaction, tag='#budget'):\n",
+    "    print(t)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd33fd91",
+   "id": "9e9f82fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def balance(acct, budgets=True):\n",
+    "    res = sum(e.value for e in DB.select(Entry, account=acct))\n",
+    "    if not budgets:\n",
+    "        res -= sum(e.value for e in DB.select(Entry, account=acct, tag=Tag.B))\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b75f5e7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-960.0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balance('expenses:food')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "de1070ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.0"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balance('expenses:food', False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "5320c6d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "438 μs ± 6.86 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit balance('expenses:food', False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "acc4ec79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def balance(acct, budgets=True):\n",
+    "    lst = DB.select(Entry, account=acct)\n",
+    "    if budgets:\n",
+    "        res = sum(e.value for e in lst)\n",
+    "    else:\n",
+    "        res = sum(e.value for e in lst if not Tag.B in e.tags)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8cde919b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balance('expenses:food', False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d4a189e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 11.01 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "1.88 ms ± 1.77 ms per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit balance('expenses:food', False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "cd9fe5a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def balance(acct, budgets=True):\n",
+    "    lst = DB.select(Entry, account=acct)\n",
+    "    res = sum(e.value for e in lst)\n",
+    "    if not budgets:\n",
+    "        res -= sum(e.value for e in lst if Tag.B in e.tags)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "3a473625",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balance('expenses:food', False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "36b09574",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "544 μs ± 108 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit balance('expenses:food', False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "909bfae8",
    "metadata": {},
    "outputs": [],
    "source": []
