--- a/sandbox/parsers.ipynb
+++ b/sandbox/parsers.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "' '"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "'A'"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,26 +241,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'terminology': {'credit': 'credit', 'debit': 'debit'},\n",
-       " 'csv': {'occu': {'accounts': ['buckets',\n",
-       "    'checking-jc',\n",
-       "    'checking-lc',\n",
-       "    'savings-jc',\n",
-       "    'savings-lc',\n",
-       "    'reservoir'],\n",
-       "   'description': 'desc',\n",
+       "{'terminology': {'cname': 'credit', 'dname': 'debit'},\n",
+       " 'csv': {'occu': {'description': 'rec[\"Description\"] + rec[\"Extended Description\"]',\n",
+       "   'date': 'rec[\"Posting Date\"]',\n",
+       "   'amount': 'abs(float(rec[\"Amount\"]))',\n",
+       "   'credit': 'rec[\"Amount\"].startswith(\"-\")'},\n",
+       "  'chase': {'description': 'rec[\"Description\"]',\n",
+       "   'date': 'rec[\"Post Date\"]',\n",
+       "   'amount': 'abs(float(rec[\"Amount\"]))',\n",
+       "   'column': 'rec[\"Amount\"].startswith(\"-\")'},\n",
+       "  'citi': {'description': 'desc',\n",
        "   'date': 'date',\n",
        "   'amount': 'amount',\n",
        "   'column': 'column'}}}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,26 +300,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'terminology': {'credit': 'credit', 'debit': 'debit'},\n",
-       " 'csv': {'occu': {'accounts': ['buckets',\n",
-       "    'checking-jc',\n",
-       "    'checking-lc',\n",
-       "    'savings-jc',\n",
-       "    'savings-lc',\n",
-       "    'reservoir'],\n",
-       "   'description': 'desc',\n",
+       "{'terminology': {'cname': 'credit', 'dname': 'debit'},\n",
+       " 'csv': {'occu': {'description': 'rec[\"Description\"] + rec[\"Extended Description\"]',\n",
+       "   'date': 'rec[\"Posting Date\"]',\n",
+       "   'amount': 'abs(float(rec[\"Amount\"]))',\n",
+       "   'credit': 'rec[\"Amount\"].startswith(\"-\")'},\n",
+       "  'chase': {'description': 'rec[\"Description\"]',\n",
+       "   'date': 'rec[\"Post Date\"]',\n",
+       "   'amount': 'abs(float(rec[\"Amount\"]))',\n",
+       "   'column': 'rec[\"Amount\"].startswith(\"-\")'},\n",
+       "  'citi': {'description': 'desc',\n",
        "   'date': 'date',\n",
        "   'amount': 'amount',\n",
        "   'column': 'column'}}}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,104 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dct = res['csv']['occu']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['buckets',\n",
-       " 'checking-jc',\n",
-       " 'checking-lc',\n",
-       " 'savings-jc',\n",
-       " 'savings-lc',\n",
-       " 'reservoir']"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dct.pop('accounts')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'description': 'desc', 'date': 'date', 'amount': 'amount', 'column': 'column'}"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dct"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = {'a': 0, 'b': 1}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p |= dct"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a': 0,\n",
-       " 'b': 1,\n",
-       " 'description': 'desc',\n",
-       " 'date': 'date',\n",
-       " 'amount': 'amount',\n",
-       " 'column': 'column'}"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +359,7 @@
        "'credit'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,47 +370,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'buckets': 'occu',\n",
-       " 'checking-jc': 'occu',\n",
-       " 'checking-lc': 'occu',\n",
-       " 'savings-jc': 'occu',\n",
-       " 'savings-lc': 'occu',\n",
-       " 'reservoir': 'occu',\n",
-       " 'amazon': 'chase',\n",
-       " 'freedom': 'chase',\n",
-       " 'sapphire-jc': 'chase',\n",
-       " 'sapphire-lc': 'chase',\n",
-       " 'united': 'chase'}"
+       "{'occu': {'description': <function <lambda>(rec)>,\n",
+       "  'date': <function <lambda>(rec)>,\n",
+       "  'amount': <function <lambda>(rec)>,\n",
+       "  'credit': <function <lambda>(rec)>},\n",
+       " 'chase': {'description': <function <lambda>(rec)>,\n",
+       "  'date': <function <lambda>(rec)>,\n",
+       "  'amount': <function <lambda>(rec)>,\n",
+       "  'column': <function <lambda>(rec)>},\n",
+       " 'citi': {'description': <function <lambda>(rec)>,\n",
+       "  'date': <function <lambda>(rec)>,\n",
+       "  'amount': <function <lambda>(rec)>,\n",
+       "  'column': <function <lambda>(rec)>}}"
       ]
      },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Config.parsers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'occu': ColMap(description='desc', date='date', amount='amount', column='column'),\n",
-       " 'chase': ColMap(description='desc', date='date', amount='amount', column='column')}"
-      ]
-     },
-     "execution_count": 51,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +426,7 @@
        "123"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +460,7 @@
        "'/Users/conery'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +480,7 @@
        "'/Users/conery'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,29 +491,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[63]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;43meval\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mos.getenv(\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mHOME\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m)\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlocals\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdct\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mrec\u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mglobals\u001b[39;49m\u001b[43m=\u001b[49m\u001b[43m{\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m<string>:1\u001b[39m\n",
-      "\u001b[31mNameError\u001b[39m: name 'os' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "eval('os.getenv(\"HOME\")', locals = {'dct': rec}, globals={})"
+    "# eval('os.getenv(\"HOME\")', locals = {'dct': rec}, globals={})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +509,7 @@
        "<function __main__.<lambda>(dct)>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +538,7 @@
        "123"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -684,13 +558,62 @@
        "'Aloha'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "eval(f'dct[\"description\"].capitalize()', locals = {'dct': rec}, globals={})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = '; a budget: aloha:'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['budget:', 'aloha:']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r'\\w+:', s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['#budget', '#aloha']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[f'#{s[:-1]}' for s in re.findall(r'\\w+:', s)]"
    ]
   },
   {
