--- a/sandbox/DB.ipynb
+++ b/sandbox/DB.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dexter.DB import DB, Account, Entry, Transaction, Document\n",
+    "from dexter.DB import DB, Account, Entry, Transaction, RegExp, Document\n",
     "from dexter.config import Tag\n",
     "\n",
     "from datetime import date"
@@ -73,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "<Account: <Acct equity equity>>"
+       "<Account: equity equity>"
       ]
      },
      "execution_count": 4,
@@ -125,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Account: <Acct equity equity>>, <Account: <Acct yoyodyne income>>, <Account: <Acct bank:checking assets>>, <Account: <Acct amex:blue liabilities>>, <Account: <Acct chase:visa liabilities>>, <Account: <Acct groceries expenses>>, <Account: <Acct household expenses>>, <Account: <Acct mortgage expenses>>, <Account: <Acct car expenses>>, <Account: <Acct travel expenses>>, <Account: <Acct equity equity>>]"
+       "[<Account: equity equity>, <Account: checking assets>, <Account: savings assets>, <Account: expenses:car expenses>, <Account: expenses:car:payment expenses>, <Account: expenses:car:fuel expenses>, <Account: expenses:food expenses>, <Account: groceries expenses>, <Account: restaurant expenses>, <Account: expenses:home expenses>, <Account: household expenses>, <Account: mortgage expenses>, <Account: expenses:travel expenses>, <Account: income:yoyodyne income>, <Account: visa liabilities>, <Account: equity equity>, <Account: equity equity>]"
       ]
      },
      "execution_count": 5,
@@ -145,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "<Account: <Acct equity equity>>"
+       "<Account: equity equity>"
       ]
      },
      "execution_count": 6,
@@ -250,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "['admin', 'config', 'demo', 'dev', 'dexter', 'foo', 'local', 'pytest']"
+       "['admin', 'config', 'demo', 'dev', 'dexter', 'foo', 'local', 'mini', 'pytest']"
       ]
      },
      "execution_count": 11,
@@ -319,10 +319,9 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('6808ae0cd269ec524930cf4c'),\n",
+       "{'_id': ObjectId('681fa751bde5205e989b591f'),\n",
        " 'name': 'equity',\n",
-       " 'category': 'equity',\n",
-       " 'comment': 'type: equity'}"
+       " 'category': 'equity'}"
       ]
      },
      "execution_count": 15,
@@ -343,10 +342,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'transaction', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\x165\\x13\\xb7\\xab\\x8eK\\xb8\\xa9R\\x169\\xaf67V', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
-      "{'name': 'reg_exp', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'4\\xa2p\\x03\\x1a\\xb9M\"\\xad(\\xe1\\x97\\x07\\x94I\\x00', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
-      "{'name': 'entry', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'^\\x16-O\\x83\\x7fH\\xe3\\xa1y-\\xb8\\xd8\\xd9\\xe4\\xc2', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
-      "{'name': 'account', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xdb\\x009\\x00\\xbbzK\\x93\\x96\\xd2#+]C\\x08\\xed', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n"
+      "{'name': 'transaction', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b':\\xb0\\x18\\xfa\\x1e\\xbaFL\\xb8\\xeb\\xf5\\x14\\xf4\\x06>&', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
+      "{'name': 'entry', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'j\\x07{15uB\\x9e\\x88\\x00\\xbcj\\xec\\xf23\\x84', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
+      "{'name': 'account', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xaa\\xe4\\xefh\\x94EBD\\xb2\\xd9w9\\x10\\xc6\\xd1\\x7f', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n",
+      "{'name': 'reg_exp', 'type': 'collection', 'options': {}, 'info': {'readOnly': False, 'uuid': Binary(b'\\xe6\\x15\\x97jYvNC\\xacE\\x8c{\\x1f,\\xfc\\x03', 4)}, 'idIndex': {'v': 2, 'key': {'_id': 1}, 'name': '_id_'}}\n"
      ]
     }
    ],
@@ -365,9 +364,9 @@
      "output_type": "stream",
      "text": [
       "transaction\n",
-      "reg_exp\n",
       "entry\n",
-      "account\n"
+      "account\n",
+      "reg_exp\n"
      ]
     }
    ],
@@ -409,10 +408,9 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('6808ae0cd269ec524930cf4c'),\n",
+       "{'_id': ObjectId('681fa751bde5205e989b591f'),\n",
        " 'name': 'equity',\n",
-       " 'category': 'equity',\n",
-       " 'comment': 'type: equity'}"
+       " 'category': 'equity'}"
       ]
      },
      "execution_count": 19,
@@ -433,23 +431,178 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('6808ae0cd269ec524930cf4c'), 'name': 'equity', 'category': 'equity', 'comment': 'type: equity'}\n",
-      "{'_id': ObjectId('6808ae0cd269ec524930cf4d'), 'name': 'yoyodyne', 'category': 'income', 'comment': 'type: income'}\n",
-      "{'_id': ObjectId('6808ae0cd269ec524930cf4e'), 'name': 'bank:checking', 'category': 'assets', 'comment': 'type: assets'}\n",
-      "{'_id': ObjectId('6808ae0cd269ec524930cf4f'), 'name': 'amex:blue', 'category': 'liabilities', 'comment': 'type: liabilities'}\n",
-      "{'_id': ObjectId('6808ae0cd269ec524930cf50'), 'name': 'chase:visa', 'category': 'liabilities', 'comment': 'type: liabilities'}\n",
-      "{'_id': ObjectId('6808ae0cd269ec524930cf51'), 'name': 'groceries', 'category': 'expenses', 'comment': 'type: expenses'}\n",
-      "{'_id': ObjectId('6808ae0cd269ec524930cf52'), 'name': 'household', 'category': 'expenses', 'comment': 'type: expenses'}\n",
-      "{'_id': ObjectId('6808ae0cd269ec524930cf53'), 'name': 'mortgage', 'category': 'expenses', 'comment': 'type: expenses'}\n",
-      "{'_id': ObjectId('6808ae0cd269ec524930cf54'), 'name': 'car', 'category': 'expenses', 'comment': 'type: expenses'}\n",
-      "{'_id': ObjectId('6808ae0cd269ec524930cf55'), 'name': 'travel', 'category': 'expenses', 'comment': 'type: expenses'}\n",
-      "{'_id': ObjectId('680a3a4f13e496bd2ec958a1'), 'name': 'equity', 'category': 'equity'}\n"
+      "{'_id': ObjectId('681fa751bde5205e989b591f'), 'name': 'equity', 'category': 'equity'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b5920'), 'name': 'assets:bank:checking', 'category': 'assets', 'abbrev': 'checking', 'parser': 'occu'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b5921'), 'name': 'assets:bank:savings', 'category': 'assets', 'abbrev': 'savings', 'parser': 'occu'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b5922'), 'name': 'expenses:car', 'category': 'expenses'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b5923'), 'name': 'expenses:car:payment', 'category': 'expenses'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b5924'), 'name': 'expenses:car:fuel', 'category': 'expenses'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b5925'), 'name': 'expenses:food', 'category': 'expenses'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b5926'), 'name': 'expenses:food:groceries', 'category': 'expenses', 'abbrev': 'groceries'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b5927'), 'name': 'expenses:food:restaurant', 'category': 'expenses', 'abbrev': 'restaurant'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b5928'), 'name': 'expenses:home', 'category': 'expenses'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b5929'), 'name': 'expenses:home:household', 'category': 'expenses', 'abbrev': 'household'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b592a'), 'name': 'expenses:home:mortgage', 'category': 'expenses', 'abbrev': 'mortgage'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b592b'), 'name': 'expenses:travel', 'category': 'expenses'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b592c'), 'name': 'income:yoyodyne', 'category': 'income'}\n",
+      "{'_id': ObjectId('681fa751bde5205e989b592d'), 'name': 'liabilities:chase:visa', 'category': 'liabilities', 'abbrev': 'visa', 'parser': 'chase'}\n",
+      "{'_id': ObjectId('6826a2a1fdf329561cb45b07'), 'name': 'equity', 'category': 'equity'}\n",
+      "{'_id': ObjectId('6826a6d1865b64c694f9bd24'), 'name': 'equity', 'category': 'equity'}\n"
      ]
     }
    ],
    "source": [
     "for obj in db['account'].find():\n",
     "    print(obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'pytest'), 'regexp')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.database.regexp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'pytest'), 'regexp')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.regexp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = db.regexp.delete_many({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.deleted_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dexter.DB.RegExp"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RegExp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<RegExp: <RE trans CHEVRON Chevron car>>, <RegExp: <RE trans COSTCO Costco food:groceries>>, <RegExp: <RE trans .*COMCAST Comcast utility>>, <RegExp: <RE trans Check # (\\d+) Check #{0} : >>, <RegExp: <RE trans WSFERRIES-(.*) Ferry {0.capwords} travel>>]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RegExp.objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RegExp.objects.delete()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RegExp.objects"
    ]
   },
   {
