--- a/sandbox/DB_accounts.ipynb
+++ b/sandbox/DB_accounts.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB.open('pytest')"
+    "DB.open('dev')"
    ]
   },
   {
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Account: <Acct assets:bank:checking assets>>]"
+       "[<Account: checking assets>]"
       ]
      },
      "execution_count": 3,
@@ -68,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Account: <Acct expenses:food expenses>>, <Account: <Acct expenses:food:groceries expenses>>, <Account: <Acct expenses:food:restaurant expenses>>]"
+       "[<Account: expenses:food expenses>, <Account: groceries expenses>, <Account: restaurant expenses>]"
       ]
      },
      "execution_count": 4,
@@ -90,9 +90,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Acct expenses:food expenses>\n",
-      "<Acct expenses:food:groceries expenses>\n",
-      "<Acct expenses:food:restaurant expenses>\n"
+      "expenses:food expenses\n",
+      "groceries expenses\n",
+      "restaurant expenses\n"
      ]
     }
    ],
@@ -110,8 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "{'amex',\n",
-       " 'assets',\n",
+       "{'assets',\n",
        " 'bank',\n",
        " 'car',\n",
        " 'chase',\n",
@@ -176,24 +175,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b5c4ffb7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dct = DB.full_names()"
+    "dct = DB.account_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "50b57f94",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'equity': ['equity'],\n",
+       "{'equity': ['equity', 'equity', 'equity'],\n",
        " 'assets': ['assets:bank:checking', 'assets:bank:savings'],\n",
        " 'bank': ['assets:bank:checking', 'assets:bank:savings'],\n",
        " 'checking': ['assets:bank:checking'],\n",
@@ -224,13 +223,12 @@
        " 'travel': ['expenses:travel'],\n",
        " 'income': ['income:yoyodyne'],\n",
        " 'yoyodyne': ['income:yoyodyne'],\n",
-       " 'liabilities': ['liabilities:amex', 'liabilities:chase:visa'],\n",
-       " 'amex': ['liabilities:amex'],\n",
+       " 'liabilities': ['liabilities:chase:visa'],\n",
        " 'chase': ['liabilities:chase:visa'],\n",
        " 'visa': ['liabilities:chase:visa']}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "64ee2810",
    "metadata": {},
    "outputs": [
@@ -260,7 +258,7 @@
        " 'expenses:travel']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e12e2342",
    "metadata": {},
    "outputs": [
@@ -281,7 +279,7 @@
        "10"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,17 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f94b5e3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dct = DB.full_names('expenses')"
+    "dct = DB.account_names('expenses')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "e3598394",
    "metadata": {},
    "outputs": [
@@ -335,7 +333,7 @@
        " 'travel': ['expenses:travel']}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "9fcdd8fa",
    "metadata": {},
    "outputs": [
@@ -356,7 +354,7 @@
        "11"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "b0f1d649",
    "metadata": {},
    "outputs": [
@@ -377,7 +375,7 @@
        "['expenses:car', 'expenses:car:payment', 'expenses:car:fuel']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "3f3728e5",
    "metadata": {},
    "outputs": [
@@ -409,11 +407,12 @@
        " 'expenses:home:mortgage',\n",
        " 'expenses:travel',\n",
        " 'income:yoyodyne',\n",
-       " 'liabilities:amex',\n",
-       " 'liabilities:chase:visa']"
+       " 'liabilities:chase:visa',\n",
+       " 'equity',\n",
+       " 'equity']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "a2e618ef",
    "metadata": {},
    "outputs": [
@@ -443,7 +442,7 @@
        " 'expenses:travel']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "5979c1e1",
    "metadata": {},
    "outputs": [
@@ -464,7 +463,7 @@
        "['expenses.*']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "8f0125de",
    "metadata": {},
    "outputs": [
@@ -485,7 +484,7 @@
        "['expenses:car.*', 'expenses:food.*', 'expenses:home.*', 'expenses:travel.*']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "779e599d",
    "metadata": {},
    "outputs": [
@@ -515,7 +514,7 @@
        " 'expenses:travel']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "e4892099",
    "metadata": {},
    "outputs": [
@@ -536,7 +535,7 @@
        "['expenses:food', 'expenses:food:groceries', 'expenses:food:restaurant']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "d93c1063",
    "metadata": {},
    "outputs": [
@@ -557,7 +556,7 @@
        "['expenses:food.*']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "9ae15eb0",
    "metadata": {},
    "outputs": [
@@ -578,7 +577,7 @@
        "['expenses:food', 'expenses:food:groceries.*', 'expenses:food:restaurant.*']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "e489a913",
    "metadata": {},
    "outputs": [
@@ -609,7 +608,7 @@
        " 'income:yoyodyne']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "e6fd9f32",
    "metadata": {},
    "outputs": [
@@ -630,7 +629,7 @@
        "['expenses.*', 'income.*']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "7770e67f",
    "metadata": {},
    "outputs": [
@@ -655,13 +654,136 @@
        " 'income:yoyodyne.*']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "DB.account_groups(['expenses:2','income:2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "feb1af54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Account: groceries expenses>]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Account.objects(name__exact='expenses:food:groceries')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "98eef2ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Account: groceries expenses>]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Account.objects(abbrev__exact='groceries')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e1e1193a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = 'expenses:food:groceries'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "280e8ed5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "expenses:food:groceries\n"
+     ]
+    }
+   ],
+   "source": [
+    "if acct := Account.objects(name__exact=s) or Account.objects(abbrev__exact=s):\n",
+    "    print(acct[0].name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b635d25b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'expenses:food:groceries'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.fullname('expenses:food:groceries')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ca0a4ad0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'expenses:food:groceries'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.fullname('groceries')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9c0dc81e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB.fullname('groc')"
    ]
   },
   {
