Update main, io to use new DB API

--- a/sandbox/mongoengine.ipynb
+++ b/sandbox/mongoengine.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "0f11e3da",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "['system.version']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,15 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f7ec37c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "96cef141",
    "metadata": {},
    "outputs": [
@@ -135,7 +127,7 @@
        "['reg_exp', 'transaction', 'account', 'entry']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "15c119d8",
    "metadata": {},
    "outputs": [
@@ -158,13 +150,34 @@
        " 'category': 'equity'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pm['dev'].account.find_one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a4f58ad7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pm['dev'].account.count_documents({})"
    ]
   },
   {
@@ -177,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "d2b52ab6",
    "metadata": {},
    "outputs": [],
@@ -187,17 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "30216b11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dexter.DB import Account, Entry, Transaction, RegExp, Document"
+    "from dexter.DB import Account, Entry, Transaction, RegExp, Document, Dexter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "40074ad9",
    "metadata": {},
    "outputs": [
@@ -207,7 +220,7 @@
        "[<Account: equity equity>, <Account: checking assets>, <Account: savings assets>, <Account: expenses:car expenses>, <Account: expenses:car:payment expenses>, <Account: expenses:car:fuel expenses>, <Account: expenses:donation expenses>, <Account: gift expenses>, <Account: charity expenses>, <Account: expenses:food expenses>, <Account: groceries expenses>, <Account: restaurant expenses>, <Account: expenses:home expenses>, <Account: mortgage expenses>, <Account: household expenses>, <Account: utility expenses>, <Account: yard expenses>, <Account: medical expenses>, <Account: alice expenses>, <Account: bob expenses>, '...(remaining elements truncated)...']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "d24416f6",
    "metadata": {},
    "outputs": [
@@ -228,7 +241,7 @@
        "26"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +252,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "c906ebd5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad9afc27",
+   "metadata": {},
+   "source": [
+    "Can still access the underlying connection:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "0498a069",
    "metadata": {},
    "outputs": [
@@ -252,7 +281,7 @@
        " 'comment': 'type: equity'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,8 +292,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "31b6c7c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Dexter: <DB created None>>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dexter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a9aad4d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Dexter: <DB created 2025-05-19>>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dexter(date='2025-05-19')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "109b3358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0ba0377f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 5, 19, 20, 7, 27, 879624)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "31ee1139",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = Dexter(date = datetime.now())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a2c8d350",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Dexter: <DB created 2025-05-19>>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c75dc412",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Dexter: <DB created 2025-05-19>>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afde42c0",
    "metadata": {},
    "outputs": [],
    "source": []
