Add info command

--- a/sandbox/mongoengine.ipynb
+++ b/sandbox/mongoengine.ipynb
@@ -181,6 +181,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f4ff146d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pm['dev']['account'].count_documents({})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7754e149",
    "metadata": {},
